--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <header>
   <img src="assets/logo.png" class="logo">
   <nav>
-    <button onclick="goOrders()">Orders</button>
-    <button onclick="goLogin()">Login / Register</button>
+    <button onclick="goOrders()" class="orders-btn">
+  Orders
+  <span id="orderBadge" class="badge hidden"></span>
+</button>
+
   </nav>
 </header>
 
