--- a/orders.html
+++ b/orders.html
@@ -4,37 +4,88 @@
   <title>Orders</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-<h2>Orders</h2>
+<body class="center">
+
+<h2 id="pageTitle">Orders</h2>
 <div id="orders"></div>
 
-<script src="js/storage.js"></script>
-<script src="js/auth.js"></script>
+<script src="js/api.js"></script>
 <script>
-const user = localStorage.getItem("user");
-const orders = getAllOrders();
-const container = document.getElementById("orders");
-const isAdmin = user === "aquahillsbeverages@gmail.com";
+(async () => {
+  const email = localStorage.getItem("user");
+  if (!email) {
+    window.location.href = "login.html";
+    return;
+  }
 
-orders.forEach((o, i) => {
-  if (!isAdmin && o.email !== user) return;
+  const user = await api("getUser", { email });
+  const res = await api("getOrders", { email });
+  const orders = res.orders || [];
 
-  const div = document.createElement("div");
-  div.innerHTML = `
-    <p><strong>${o.email}</strong></p>
-    <p>Bottles: ${o.qty}</p>
-    <p>Total: ₹${o.total}</p>
-    <p>Status: ${o.status}</p>
-    ${isAdmin && o.status === "Pending" 
-      ? `<button onclick="fulfill(${i})">Mark Fulfilled</button>` 
-      : ""}
-    <hr>
-  `;
-  container.appendChild(div);
-});
-function fulfill(index) {
-  orders[index].status = "Fulfilled";
-  updateOrders(orders);
+  const container = document.getElementById("orders");
+  const title = document.getElementById("pageTitle");
+
+  if (user.role === "delivery") {
+    title.innerText = "Delivery Orders";
+  }
+
+  if (orders.length === 0) {
+    container.innerHTML = "<p>No orders found.</p>";
+    return;
+  }
+
+  orders.forEach(o => {
+    const div = document.createElement("div");
+    div.className = "card";
+
+    let html = `
+      <p><strong>Status:</strong> ${o.status}</p>
+      <p><strong>Bottles:</strong> ${o.bottles}</p>
+      <p><strong>Ordered At:</strong> ${new Date(o.createdAt).toLocaleString()}</p>
+    `;
+
+    /* CUSTOMER */
+    if (user.role === "customer") {
+      html += `<p><strong>Total:</strong> ₹${o.total}</p>`;
+    }
+
+    /* DELIVERY */
+    if (user.role === "delivery" && o.customer) {
+      html += `
+        <p><strong>Name:</strong> ${o.customer.name}</p>
+        <p><strong>Phone:</strong> ${o.customer.phone}</p>
+        <p><strong>Address:</strong>
+          ${o.customer.house}, ${o.customer.street},
+          ${o.customer.city} - ${o.customer.pincode}
+        </p>
+      `;
+    }
+
+    /* ADMIN */
+    if (user.role === "admin") {
+      html += `
+        <p><strong>Email:</strong> ${o.email}</p>
+        <p><strong>Total:</strong> ₹${o.total}</p>
+        <p><strong>Customer:</strong> ${o.customer?.name || ""}</p>
+      `;
+    }
+
+    /* STATUS ACTIONS */
+    if (user.role !== "customer" && o.status === "Pending") {
+      html += `
+        <button onclick="updateStatus('${o.orderId}','Fulfilled')">
+          Mark Fulfilled
+        </button>
+      `;
+    }
+
+    div.innerHTML = html;
+    container.appendChild(div);
+  });
+})();
+
+async function updateStatus(orderId, status) {
+  await api("updateOrderStatus", { orderId, status });
   location.reload();
 }
 </script>
