--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       <span id="orderBadge" class="badge hidden"></span>
     </button>
 
-    <button onclick="goLogin()">Login / Register</button>
+    <button onclick="window.location.href='login.html'">
+  Login / Register
+</button>
+
   </nav>
 </header>
 
