--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       <span id="orderBadge" class="badge hidden"></span>
     </button>
 
-    <button onclick="window.location.href='login.html'">
+    <button onclick="window.location.href='home/login.html'">
   Login / Register
 </button>
+
 
   </nav>
 </header>
