--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span id="orderBadge" class="badge hidden"></span>
     </button>
 
-    <button onclick="window.location.href='home/login.html'">
+    <button onclick="window.location.href='login.html'">
   Login / Register
 </button>
 
