--- a/orders.html
+++ b/orders.html
@@ -11,6 +11,7 @@
 
 <script src="js/api.js"></script>
 <script>
+  let deliveryUsers = [];
 (async () => {
   const email = localStorage.getItem("user");
   if (!email) {
