--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
 
 <section>
   <h3>Price Control</h3>
-  <input id="priceInput" type="number">
+  <input id="price" type="number">
   <button onclick="updatePrice()">Update Price</button>
 </section>
 
