--- a/index.html
+++ b/index.html
@@ -32,20 +32,39 @@
   <div class="carousel" id="carousel">
 
     <div class="card" onclick="orderNow()">
-      <h2>Order Now</h2>
-      <p>Fresh 20L water delivered to your home</p>
-    </div>
+  <h2>Pure Mineral Water</h2>
+  <p>
+    Scientifically purified 20L mineral water, processed through
+    multi-stage filtration and quality-checked for every delivery.
+  </p>
+  <p>
+    Trusted by homes and businesses for consistency, safety, and taste.
+  </p>
+</div>
+
 
     <div class="card">
-      <h2>About Us</h2>
-      <p>Aquahills Beverages delivers pure and safe drinking water with reliability and care.</p>
-    </div>
+  <h2>Quality You Can Trust</h2>
+  <p>
+    Our water undergoes advanced RO, UV, and mineral balancing processes
+    to ensure optimal purity and essential mineral retention.
+  </p>
+  <p>
+    Every batch meets strict quality standards before dispatch.
+  </p>
+</div>
 
-    <div class="card">
-      <h2>Contact Us</h2>
-      <p>📞 +91 99106 57711</p>
-      <p>📧 aquahillsbeverages@gmail.com</p>
-    </div>
+<div class="card">
+  <h2>Reliable Delivery</h2>
+  <p>
+    Timely doorstep delivery managed through a streamlined order and
+    fulfillment system.
+  </p>
+  <p>
+    Serving residential and commercial customers with reliability and care.
+  </p>
+</div>
+
 
   </div>
 </section>
