--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <img src="assets/logo.png" class="logo" />
 
   <nav class="nav">
+    <button id="adminBtn" onclick="goAdmin()" style="display:none">
+  ⚙️
+</button>
+
     <button class="orders-btn" onclick="goOrders()">
       Orders
       <span id="orderBadge" class="badge hidden"></span>
