--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
   </p>
 </div>
 
-
-
-    <div class="card">
+<div class="card">
   <h2>Quality You Can Trust</h2>
   <p>
     Our water undergoes advanced RO, UV, and mineral balancing processes
@@ -64,13 +62,15 @@
 </div>
 
 <div class="card">
-  <h2>Reliable Delivery</h2>
+  <h2>Quality You Can Trust</h2>
+
   <p>
-    Timely doorstep delivery managed through a streamlined order and
-    fulfillment system.
+    RO purification combined with UV treatment and ozonized disinfection
+    ensures consistent purity and safety.
   </p>
+
   <p>
-    Serving residential and commercial customers with reliability and care.
+    Certified to BIS standards and compliant with ISI quality requirements.
   </p>
 </div>
 
