--- a/login.html
+++ b/login.html
@@ -8,9 +8,7 @@
 
 <h2>Login / Register</h2>
 
-<button onclick="startGoogleLogin()">
-  Continue with Google
-</button>
+<button onclick="startGoogleLogin()">Continue with Google</button>
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
@@ -18,8 +16,5 @@
 <script src="js/firebase.js"></script>
 <script src="js/api.js"></script>
 
-
-
 </body>
-
 </html>
