--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
 
   <nav>
     <button onclick="goOrders()">Orders</button>
-    <button onclick="safeOrderNow()">Order Now</button>
     <button onclick="window.location.href='login.html'">Login</button>
   </nav>
 </header>
 
 <section class="hero">
   <h1>Premium Drinking Water for Home & Business</h1>
-  <button onclick="safeOrderNow()" class="primary-btn">
+  <button onclick="goOrders()" class="primary-btn">
     Order Now
   </button>
 </section>
