--- a/orders.html
+++ b/orders.html
@@ -45,62 +45,72 @@
 <script src="js/api.js"></script>
 
 <script>
-document.addEventListener("DOMContentLoaded", async () => {
+document.addEventListener("DOMContentLoaded", () => {
 
   const content = document.getElementById("contentArea");
-  const email = localStorage.getItem("user");
 
-  if (!email) {
-    content.innerHTML = `
-      <div class="card">
-        <h2>You are not logged in</h2>
-        <p>To track your orders and manage deliveries, please login securely.</p>
-        <button onclick="window.location.href='login.html'" class="primary-btn">
-          Login / Register
-        </button>
-      </div>
-    `;
-    return;
-  }
+  firebase.auth().onAuthStateChanged(async (user) => {
 
-  try {
-    const res = await api("getOrders");
-    const orders = res.orders || [];
-
-    if (orders.length === 0) {
+    if (!user) {
       content.innerHTML = `
         <div class="card">
-          <h2>No Orders Yet</h2>
-          <p>You have not placed any orders.</p>
-          <button onclick="window.location.href='order.html'" class="primary-btn">
-            Order Now
+          <h2>You are not logged in</h2>
+          <button onclick="window.location.href='login.html'" class="primary-btn">
+            Login
           </button>
         </div>
       `;
       return;
     }
 
-    const list = orders.map(o => `
-      <div class="card">
-        <p><strong>Status:</strong> ${o.status}</p>
-        <p><strong>Bottles:</strong> ${o.bottles}</p>
-        <p><strong>Total:</strong> ₹${o.total}</p>
-        <p>${new Date(o.createdAt).toLocaleString()}</p>
-      </div>
-    `).join("");
+    try {
 
-    content.innerHTML = list;
+      const res = await api("getOrders");
 
-  } catch (e) {
+      if (!res || res.error) {
+        console.error("Backend error:", res);
+        showEmptyState();
+        return;
+      }
+
+      const orders = Array.isArray(res.orders) ? res.orders : [];
+
+      if (orders.length === 0) {
+        showEmptyState();
+        return;
+      }
+
+      content.innerHTML = orders.map(o => `
+        <div class="card">
+          <p><strong>Status:</strong> ${o.status}</p>
+          <p><strong>Bottles:</strong> ${o.bottles}</p>
+          <p><strong>Total:</strong> ₹${o.total}</p>
+          <p>${new Date(o.createdAt).toLocaleString()}</p>
+        </div>
+      `).join("");
+
+    } catch (err) {
+      console.error("Fetch failed:", err);
+      showEmptyState();
+    }
+
+  });
+
+  function showEmptyState() {
     content.innerHTML = `
       <div class="card">
-        <h2>Error Loading Orders</h2>
-        <p>Please try again later.</p>
+        <h2>You have not placed any orders</h2>
+        <p>Start by placing your first order.</p>
+        <button onclick="window.location.href='order.html'" class="primary-btn">
+          Order Now
+        </button>
       </div>
     `;
   }
+
 });
 </script>
+
 
 
 </body>
