--- a/orders.html
+++ b/orders.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your Orders</title>
+  <title>Orders</title>
   <link rel="stylesheet" href="css/style.css">
 
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
@@ -12,15 +12,12 @@
 
 <header>
   <img src="assets/logo.png" class="logo" />
-  <nav>
-  <button onclick="window.location.href='order.html'">Order Now</button>
-  <button onclick="window.location.href='index.html'">Home</button>
-</nav>
-
+  <nav id="navArea">
+    <!-- dynamic -->
+  </nav>
 </header>
 
-<main class="center" id="contentArea">
-</main>
+<main class="center" id="contentArea"></main>
 
 <footer class="footer">
   <div class="footer-container">
@@ -48,70 +45,84 @@
 document.addEventListener("DOMContentLoaded", () => {
 
   const content = document.getElementById("contentArea");
+  const nav = document.getElementById("navArea");
 
   firebase.auth().onAuthStateChanged(async (user) => {
 
     if (!user) {
+      window.location.href = "login.html";
+      return;
+    }
+
+    const profile = await api("getUser");
+
+    if (!profile || profile.error) {
+      content.innerHTML = "<h2>Profile not found</h2>";
+      return;
+    }
+
+    // NAVIGATION
+    nav.innerHTML = `
+      ${profile.role === "admin" ? 
+        `<button onclick="window.location.href='admin.html'">⚙</button>` : ""}
+      <button onclick="window.location.href='order.html'">Order</button>
+      <button onclick="window.location.href='index.html'">Home</button>
+    `;
+
+    // FETCH ORDERS
+    let ordersData;
+
+    if (profile.role === "admin" || profile.role === "delivery") {
+
+      // get all users first
+      const allUsers = await api("getAllUsers");
+
+      const allOrders = [];
+
+      for (const u of allUsers.users) {
+        const userOrders = await api("getOrders", { email: u.email });
+        if (userOrders.orders) {
+          userOrders.orders.forEach(o => {
+            allOrders.push({
+              ...o,
+              email: u.email
+            });
+          });
+        }
+      }
+
+      ordersData = allOrders;
+
+    } else {
+
+      const res = await api("getOrders");
+      ordersData = res.orders || [];
+
+    }
+
+    if (!ordersData.length) {
       content.innerHTML = `
         <div class="card">
-          <h2>You are not logged in</h2>
-          <button onclick="window.location.href='login.html'" class="primary-btn">
-            Login
-          </button>
+          <h2>No Orders Found</h2>
         </div>
       `;
       return;
     }
 
-    try {
-
-      const res = await api("getOrders");
-
-      if (!res || res.error) {
-        console.error("Backend error:", res);
-        showEmptyState();
-        return;
-      }
-
-      const orders = Array.isArray(res.orders) ? res.orders : [];
-
-      if (orders.length === 0) {
-        showEmptyState();
-        return;
-      }
-
-      content.innerHTML = orders.map(o => `
-        <div class="card">
-          <p><strong>Status:</strong> ${o.status}</p>
-          <p><strong>Bottles:</strong> ${o.bottles}</p>
-          <p><strong>Total:</strong> ₹${o.total}</p>
-          <p>${new Date(o.createdAt).toLocaleString()}</p>
-        </div>
-      `).join("");
-
-    } catch (err) {
-      console.error("Fetch failed:", err);
-      showEmptyState();
-    }
+    content.innerHTML = ordersData.map(o => `
+      <div class="card">
+        ${profile.role !== "customer" ? `<p><strong>User:</strong> ${o.email}</p>` : ""}
+        <p><strong>Status:</strong> ${o.status}</p>
+        <p><strong>Bottles:</strong> ${o.bottles}</p>
+        <p><strong>Total:</strong> ₹${o.total}</p>
+        <p>${new Date(o.createdAt).toLocaleString()}</p>
+      </div>
+    `).join("");
 
   });
 
-  function showEmptyState() {
-    content.innerHTML = `
-      <div class="card">
-        <h2>You have not placed any orders</h2>
-        <p>Start by placing your first order.</p>
-        <button onclick="window.location.href='order.html'" class="primary-btn">
-          Order Now
-        </button>
-      </div>
-    `;
-  }
-
 });
 </script>
-
-
 
 </body>
 </html>
