--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <img src="assets/logo.png" class="logo" />
 
   <nav>
-  <button onclick="goOrders()">Orders</button>
-  <button id="loginNavBtn" onclick="goLogin()">Login</button>
+  <button onclick="window.location.href='orders.html'">Orders</button>
+  <button id="loginNavBtn">Login</button>
+
 </nav>
 
 </header>
