--- a/admin.html
+++ b/admin.html
@@ -2,140 +2,173 @@
 <html>
 <head>
   <title>Admin Panel</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
-  <style>
-    body {
-      margin: 0;
-      overflow-x: hidden;
-    }
+<style>
+body { margin:0; overflow-x:hidden; }
 
-    .topbar {
-      height: 70px;
-      display: flex;
-      align-items: center;
-      padding: 0 25px;
-      background: rgba(0,0,0,0.25);
-      backdrop-filter: blur(10px);
-    }
+/* TOPBAR */
+.topbar{
+  height:65px;
+  display:flex;
+  align-items:center;
+  padding:0 20px;
+  background:rgba(0,0,0,0.35);
+  backdrop-filter:blur(10px);
+}
+.menu-btn{ font-size:24px; cursor:pointer; margin-right:15px; }
 
-    .menu-btn {
-      font-size: 26px;
-      cursor: pointer;
-      margin-right: 20px;
-    }
+/* SIDEBAR */
+.sidebar{
+  position:fixed;
+  left:-250px;
+  top:0;
+  width:240px;
+  height:100%;
+  background:linear-gradient(180deg,#062c5c,#0a5fd8);
+  padding:25px 15px;
+  transition:.3s;
+  z-index:1001;
+}
+.sidebar.active{ left:0; }
+.sidebar button{
+  width:100%;
+  padding:12px;
+  margin-bottom:12px;
+  border-radius:25px;
+  border:1px solid rgba(255,255,255,.3);
+  background:transparent;
+  color:white;
+  font-weight:600;
+  cursor:pointer;
+}
+.sidebar button:hover{
+  background:white;
+  color:#0a5fd8;
+}
 
-    .sidebar {
-      position: fixed;
-      left: -260px;
-      top: 0;
-      width: 250px;
-      height: 100%;
-      background: linear-gradient(180deg, #062c5c 0%, #0a5fd8 100%);
-      padding: 30px 20px;
-      transition: 0.3s ease;
-      z-index: 1001;
-      box-shadow: 5px 0 25px rgba(0,0,0,0.4);
-    }
+.overlay{
+  position:fixed;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,.4);
+  display:none;
+  z-index:1000;
+}
+.overlay.active{ display:block; }
 
-    .sidebar.active {
-      left: 0;
-    }
+/* CONTENT */
+.content{
+  display:flex;
+  justify-content:center;
+  padding:30px 15px 60px;
+  min-height:calc(100vh - 65px);
+}
 
-    .sidebar button {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 15px;
-      border-radius: 25px;
-      border: 1px solid rgba(255,255,255,0.3);
-      background: transparent;
-      color: white;
-      font-weight: 600;
-      cursor: pointer;
-      transition: 0.3s ease;
-    }
+.admin-card{
+  width:100%;
+  max-width:1200px;
+  background:rgba(255,255,255,.18);
+  backdrop-filter:blur(15px);
+  padding:25px;
+  border-radius:18px;
+  box-shadow:0 10px 30px rgba(0,0,0,.3);
+}
 
-    .sidebar button:hover {
-      background: white;
-      color: #0a5fd8;
-    }
+/* FILTER ROW */
+.filter-row{
+  display:flex;
+  gap:15px;
+  flex-wrap:wrap;
+  margin-bottom:20px;
+}
 
-    .overlay {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.4);
-      display: none;
-      z-index: 1000;
-    }
+.filter-row input,
+.filter-row select{
+  padding:8px 12px;
+  border-radius:8px;
+  border:none;
+}
 
-    .overlay.active {
-      display: block;
-    }
+/* TABLE */
+table{
+  width:100%;
+  border-collapse:collapse;
+}
+th,td{
+  padding:12px;
+  border-bottom:1px solid rgba(255,255,255,.2);
+}
+th{ text-align:left; }
 
-    .content {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 40px 20px;
-      min-height: calc(100vh - 70px);
-    }
+.action-btn{
+  padding:6px 12px;
+  border:none;
+  border-radius:15px;
+  cursor:pointer;
+  font-weight:600;
+}
+.edit-btn{ background:white; color:#0a5fd8; }
+.delete-btn{ background:#ff4d4d; color:white; }
 
-    .content-wrapper {
-      width: 100%;
-      max-width: 1100px;
-    }
+/* PAGINATION */
+.pagination{
+  margin-top:20px;
+  display:flex;
+  justify-content:center;
+  gap:10px;
+}
+.pagination button{
+  padding:6px 12px;
+  border:none;
+  border-radius:10px;
+  cursor:pointer;
+}
 
-    .admin-card {
-      background: rgba(255,255,255,0.15);
-      backdrop-filter: blur(15px);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 10px 35px rgba(0,0,0,0.3);
-      width: 100%;
-    }
+/* MODAL */
+.modal{
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background:rgba(0,0,0,.6);
+  display:none;
+  justify-content:center;
+  align-items:center;
+  z-index:2000;
+}
+.modal-content{
+  background:white;
+  color:#062c5c;
+  padding:25px;
+  border-radius:15px;
+  width:90%;
+  max-width:400px;
+  text-align:center;
+}
+.modal-content button{
+  margin:10px;
+  padding:8px 18px;
+  border:none;
+  border-radius:20px;
+  cursor:pointer;
+}
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-      color: white;
-    }
-
-    th, td {
-      padding: 12px;
-      border-bottom: 1px solid rgba(255,255,255,0.2);
-      text-align: left;
-    }
-
-    .action-btn {
-      padding: 6px 12px;
-      border-radius: 15px;
-      border: none;
-      cursor: pointer;
-      font-weight: 600;
-    }
-
-    .edit-btn {
-      background: white;
-      color: #0a5fd8;
-    }
-
-    .save-btn {
-      background: #00b4ff;
-      color: white;
-    }
-
-    select, input {
-      padding: 6px;
-      border-radius: 6px;
-      border: none;
-    }
-  </style>
+/* MOBILE VIEW */
+@media(max-width:768px){
+  table{ display:none; }
+  .mobile-card{
+    background:rgba(255,255,255,.2);
+    padding:15px;
+    border-radius:15px;
+    margin-bottom:15px;
+  }
+}
+</style>
 </head>
 
 <body>
@@ -146,144 +179,155 @@
 </div>
 
 <div class="sidebar" id="sidebar">
-  <button onclick="navigate('dashboard')">Dashboard</button>
-  <button onclick="navigate('orders')">Orders</button>
   <button onclick="navigate('users')">Users</button>
-  <button onclick="navigate('settings')">Settings</button>
   <button onclick="logout()">Logout</button>
 </div>
 
 <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
 
 <div class="content">
-  <div class="content-wrapper" id="contentArea">
-    Loading...
+  <div class="admin-card" id="contentArea">Loading...</div>
+</div>
+
+<div class="modal" id="confirmModal">
+  <div class="modal-content">
+    <h3>Confirm Delete</h3>
+    <p>Are you sure you want to delete this user?</p>
+    <button onclick="confirmDelete()">Yes</button>
+    <button onclick="closeModal()">Cancel</button>
   </div>
 </div>
 
 <script src="js/firebase.js"></script>
 
 <script>
-function toggleSidebar() {
+let usersData=[];
+let currentPage=1;
+let usersPerPage=5;
+let deleteId=null;
+
+function toggleSidebar(){
   sidebar.classList.toggle("active");
   overlay.classList.toggle("active");
 }
-
-function closeSidebar() {
+function closeSidebar(){
   sidebar.classList.remove("active");
   overlay.classList.remove("active");
 }
-
-function navigate(section) {
+function navigate(section){
   closeSidebar();
-  showSection(section);
+  if(section==="users") loadUsers();
+}
+function logout(){
+  firebase.auth().signOut().then(()=>window.location.href="index.html");
 }
 
-firebase.auth().onAuthStateChanged(async (user) => {
-  if (!user) return window.location.href = "login.html";
-
-  const doc = await db.collection("users").doc(user.uid).get();
-  if (doc.data()?.role !== "admin")
-    return window.location.href = "index.html";
-
-  showSection("dashboard");
+firebase.auth().onAuthStateChanged(async user=>{
+  if(!user) return window.location.href="login.html";
+  const doc=await db.collection("users").doc(user.uid).get();
+  if(doc.data()?.role!=="admin") return window.location.href="index.html";
+  loadUsers();
 });
 
-function logout() {
-  firebase.auth().signOut().then(() => {
-    window.location.href = "index.html";
+async function loadUsers(){
+  const snapshot=await db.collection("users").get();
+  usersData=[];
+  snapshot.forEach(doc=>{
+    usersData.push({id:doc.id,...doc.data()});
   });
+  renderUsers();
 }
 
-function showSection(section) {
-  if (section === "dashboard") loadDashboard();
-  if (section === "users") loadUsers();
-}
+function renderUsers(){
+  const search=document.getElementById("searchInput")?.value?.toLowerCase()||"";
+  const roleFilter=document.getElementById("roleFilter")?.value||"all";
 
-async function loadDashboard() {
-  const orders = await db.collection("orders").get();
-  const users = await db.collection("users").get();
+  let filtered=usersData.filter(u=>{
+    const matchSearch=u.name?.toLowerCase().includes(search)||u.phone?.includes(search);
+    const matchRole=roleFilter==="all"||u.role===roleFilter;
+    return matchSearch&&matchRole;
+  });
 
-  contentArea.innerHTML = `
-    <div class="admin-card">
-      <h2>Dashboard</h2>
-      <p>Total Orders: ${orders.size}</p>
-      <p>Total Users: ${users.size}</p>
-    </div>
-  `;
-}
+  const start=(currentPage-1)*usersPerPage;
+  const paginated=filtered.slice(start,start+usersPerPage);
 
-async function loadUsers() {
-  const snapshot = await db.collection("users").get();
-  let rows = "";
+  let tableRows="";
+  let mobileRows="";
 
-  snapshot.forEach(doc => {
-    const u = doc.data();
-    rows += `
-      <tr id="row-${doc.id}">
-        <td><span class="name">${u.name || ""}</span></td>
-        <td><span class="phone">${u.phone || ""}</span></td>
-        <td><span class="role">${u.role}</span></td>
+  paginated.forEach(u=>{
+    tableRows+=`
+      <tr>
+        <td>${u.name||""}</td>
+        <td>${u.phone||""}</td>
+        <td>${u.role}</td>
         <td>
-          <button class="action-btn edit-btn"
-            onclick="editUser('${doc.id}')">Edit</button>
+          <button class="action-btn delete-btn" onclick="openModal('${u.id}')">Delete</button>
         </td>
       </tr>
     `;
+    mobileRows+=`
+      <div class="mobile-card">
+        <p><strong>Name:</strong> ${u.name||""}</p>
+        <p><strong>Phone:</strong> ${u.phone||""}</p>
+        <p><strong>Role:</strong> ${u.role}</p>
+        <button class="action-btn delete-btn" onclick="openModal('${u.id}')">Delete</button>
+      </div>
+    `;
   });
 
-  contentArea.innerHTML = `
-    <div class="admin-card">
-      <h2>Users</h2>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Phone</th>
-          <th>Role</th>
-          <th>Action</th>
-        </tr>
-        ${rows}
-      </table>
-    </div>
-  `;
-}
+  let totalPages=Math.ceil(filtered.length/usersPerPage);
+  let paginationBtns="";
+  for(let i=1;i<=totalPages;i++){
+    paginationBtns+=`<button onclick="changePage(${i})">${i}</button>`;
+  }
 
-function editUser(id) {
-  const row = document.getElementById("row-" + id);
+  contentArea.innerHTML=`
+    <h2>Users</h2>
 
-  const name = row.querySelector(".name").innerText;
-  const phone = row.querySelector(".phone").innerText;
-  const role = row.querySelector(".role").innerText;
-
-  row.innerHTML = `
-    <td><input id="name-${id}" value="${name}"></td>
-    <td><input id="phone-${id}" value="${phone}"></td>
-    <td>
-      <select id="role-${id}">
-        <option value="customer" ${role==="customer"?"selected":""}>Customer</option>
-        <option value="delivery" ${role==="delivery"?"selected":""}>Delivery</option>
-        <option value="admin" ${role==="admin"?"selected":""}>Admin</option>
+    <div class="filter-row">
+      <input type="text" id="searchInput" placeholder="Search..." oninput="renderUsers()">
+      <select id="roleFilter" onchange="renderUsers()">
+        <option value="all">All Roles</option>
+        <option value="customer">Customer</option>
+        <option value="delivery">Delivery</option>
+        <option value="admin">Admin</option>
       </select>
-    </td>
-    <td>
-      <button class="action-btn save-btn"
-        onclick="saveUser('${id}')">Save</button>
-    </td>
+    </div>
+
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Phone</th>
+        <th>Role</th>
+        <th>Action</th>
+      </tr>
+      ${tableRows}
+    </table>
+
+    ${mobileRows}
+
+    <div class="pagination">${paginationBtns}</div>
   `;
 }
 
-async function saveUser(id) {
-  const name = document.getElementById("name-" + id).value;
-  const phone = document.getElementById("phone-" + id).value;
-  const role = document.getElementById("role-" + id).value;
+function changePage(page){
+  currentPage=page;
+  renderUsers();
+}
 
-  await db.collection("users").doc(id).update({
-    name,
-    phone,
-    role
-  });
-
-  loadUsers();
+function openModal(id){
+  deleteId=id;
+  confirmModal.style.display="flex";
+}
+function closeModal(){
+  confirmModal.style.display="none";
+}
+async function confirmDelete(){
+  if(deleteId){
+    await db.collection("users").doc(deleteId).delete();
+    closeModal();
+    loadUsers();
+  }
 }
 </script>
 
